# mft-denoising

./: .gitignore  README.md  TECHNICAL_README.md  batch_diagnostics.py  main.py  permute_and_train.py  plot_saved_pairs.py  pyproject.toml  run_diagnostics_npz.py  test_experiments.py  visualize_trajectories.py  visualize_trajectories_video.py
configs/: 3_bump_experiment.json  3_bump_experiment_overtrain.json  big_02.json  big_03.json  big_04_good.json  big_05.json  big_06.json  config_001.json  config_002.json  config_003.json  config_004.json  config_for_permute_train.json  example_config.json  overaparam_3.json  overaparam_3_exact.json  reg_01.json  reg_02.json  reg_03_good.json  reg_04.json  reg_05.json  reg_05_two_stage.json  reg_06.json  reg_07.json  reg_08.json  sparsity_play.json  standard_config_gpu.json  standard_gpu_big.json  standard_gpu_big_batch_play.json  standard_gpu_big_slow.json  symmetric_center.json  trajectory_experiment.json  trajectory_experiment_l4.json  trajectory_experiment_logistic.json  trajectory_experiment_logistic_play.json  trajectory_experiment_slow.json  width_01.json
experiments_claude/: GAUSSIAN_HEALTH_RESULTS.md  README.md  SWEEP_READY.md  batch_size_profiler.py  combine_results.py  diagnostics_guide.md  experiment_runner.py  extended_training_results.json  extended_training_sweep.py  monitor_training.py  quick_diagnostic_results.json  quick_diagnostic_results_combined.json  quick_diagnostic_results_manual.json  quick_diagnostic_sweep.py  quick_hyperparam_sweep.py  run_remaining_experiments.py  run_validation.sh  test_sweep.py  (+7 more)
(+148 files in other folders)
