[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mft-denoising"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch >= 2.7.1",
    "torchvision >= 0.24.1".
]

[tool.hatch.build.targets.wheel]
packages = ["mft-denoising"]
