[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mft-denoising"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch >= 2.7.1",
    "torchvision >= 0.24.1",
    "matplotlib >= 3.5.0",
    "numpy >= 1.21.0",
    "scikit-learn >= 1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mft-denoising"]
